# sextant-rs

./: Cargo.toml  README.md
doc/: calculation.md
src/: angle.rs  coordinate.rs  culmination.rs  hemisphere.rs  lib.rs  sextant.rs  sun_declination.rs
