[package]
name = "sextant"
version = "0.1.0"
edition = "2021"
authors = ["linuskmr <linuskmr.dev@gmail.com>"]
description = "Calculating the geographic position (latitude, longitude) on the Earth's surface using a sextant measurement."
keywords = ["sextant", "celestial navigation"]
license = "AGPL-3.0"
repository = "https://github.com/linuskmr/sextant-rs"


[dependencies]
chrono = "0.4.38"
